Bug 490266 - Amarok fails to build with KF < 5.94 due to KStatefulBrush include
Summary: Amarok fails to build with KF < 5.94 due to KStatefulBrush include
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-14 16:08 UTC by Joseph Yasi
Modified: 2024-07-14 19:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph Yasi 2024-07-14 16:08:46 UTC
SUMMARY
a151941ed2c9199d6d16ef91f0ecef61c4b03cca added an include of KStatefulBrush to src/playlist/ProgressiveSearchWidget.cpp. The KStatefulBrush header wasn't introduced until KF 5.94. Before that, the class was just in KColorScheme.

STEPS TO REPRODUCE
1.  Build Amarok after a151941ed2c9199d6d16ef91f0ecef61c4b03cca on Kubuntu 22.04
2. 
3. 

OBSERVED RESULT
/<<PKGBUILDDIR>>/src/playlist/ProgressiveSearchWidget.cpp:25:10: fatal error: KStatefulBrush: No such file or directory
   25 | #include <KStatefulBrush>
      |          ^~~~~~~~~~~~~~~~
compilation terminated.
make[4]: *** [src/CMakeFiles/amaroklib.dir/build.make:1067: src/CMakeFiles/amaroklib.dir/playlist/ProgressiveSearchWidget.cpp.o] Error 1
See: https://launchpadlibrarian.net/739316606/buildlog_ubuntu-jammy-amd64.amarok_2%3A3.0.1+git202407132210-0+yasi1~21~ubuntu22.04.1_BUILDING.txt.gz

EXPECTED RESULT
Compile succeeds.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 22.04
(available in About System)
KDE Plasma Version: 5.24.7
KDE Frameworks Version: 5.92
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Tuomas Nurmi 2024-07-14 19:41:51 UTC
Thank you for notifying!
Comment 2 Tuomas Nurmi 2024-07-14 19:42:05 UTC
Git commit f6143b2df0b251f3e5e5665ea7121e49b0f45d7e by Tuomas Nurmi.
Committed on 14/07/2024 at 19:33.
Pushed by nurmi into branch 'master'.

Ifdef KStatefulBrush include to only Qt6 builds for now

M  +3    -0    src/playlist/ProgressiveSearchWidget.cpp

https://invent.kde.org/multimedia/amarok/-/commit/f6143b2df0b251f3e5e5665ea7121e49b0f45d7e