Ifdef KStatefulBrush include to only Qt6 builds for now

BUG: 490266